spade-tests/src/snapshots/spade_tests__ports_integration__wires_can_not_be_passed_as_generics.snap
---
source: spade-tests/src/ports_integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic types can not be ports
  ┌─ testinput:4:5
  │
4 │     inst identity(p)
  │     ^^^^^^^^^^^^^^^^ Parameter T is &bool which is a port type


